# mash

./: .gitignore  Makefile.am  README.md  configure.ac
include/: Makefile.am  common.h  mash.h  math_scraps.h
src/: AABB.h  Collision3.h  Color4f.h  Color4ub.h  ColorHSV.h  CompressedVertex.h  Constants.h  Frustum.h  Functions.h  Geometry.h  Logger.cpp  Logger.h  Makefile.am  Matrix.cpp  Matrix.h  Plane.h  Quaternion.h  Size2.h  Size3.h  Size4.h  Triangle.h  Vec2.h  Vec3.h  Vec4.h  Vertex.h
test/: Makefile.am  main.cpp  test.cpp  test.h
